Update 'ote0esrrb-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe-java-springboot:253f2ec93a22d846a997182396eba1c5779db7d7@sha256:ef8c02b25e60a5276e1f5822d17fdfba849f4934b43af73653e3404e33c44e68

--- a/components/ote0esrrb-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/ote0esrrb-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: ote0esrrb-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-java-springboot:253f2ec93a22d846a997182396eba1c5779db7d7@sha256:ef8c02b25e60a5276e1f5822d17fdfba849f4934b43af73653e3404e33c44e68
+          name: container-image
